<resources>
    <string name="app_name">Deras</string>
    <string name="description_app">Dermatitis Assistent</string>
    <string name="invalid_email_format">invalid email format</string>
    <string name="passwords_must_have_at_least_8_characters">Passwords must have at least 8 characters.</string>
    <string name="start_now">Start now</string>
    <string name="image_welcome">image_Welcome</string>
    <string name="title_menu1">Welcome to Deras</string>
    <string name="description_menu1">Dermas is skin allergy detection application</string>
    <string name="description_menu2">helps you recognize skin allergies early and will provide knowledge for early treatment</string>
    <string name="description_menu3">to prevent it from happening again, but remember, we are not doctors, so if you say it is dangerous, you should take it to the nearest medical institution and require special treatment.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="signup_to_login">Don\'t have an account? Sign Up</string>
    <string name="login_to_signup">Already have an account? Login</string>
    <string name="image_view">imageview</string>
    <string name="menu_title_bottom_nav_article">Article</string>
    <string name="menu_title_bottom_nav_detection">Detection</string>
    <string name="menu_title_bottom_nav_hystory">Hystory</string>
    <string name="menu_title_bottom_nav_profile">Profile</string>
    <string name="menu_title_bottom_nav_home">Home</string>
    <string name="content_description_btn_camera_back">Camera back</string>
    <string name="content_descrption_btn_gallery">Button galery</string>
    <string name="content_description_btn_shutter_camera">Button shutter camera</string>
    <string name="content_description_btn_switch_camera">Button switch camera</string>
    <string name="const_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="button_text_ok">OK</string>
    <string name="const_text_preview_image">Priview images</string>
    <string name="content_description_btn_close_dialog">Btn close dialog</string>
    <string name="content_description_image_detection">Description images detection</string>
    <string name="const_text_storage_location">Storage location</string>
    <string name="UI_error_camera_error">Failed to launch camera</string>
    <string name="UI_info_intent_image">Choose a picture</string>
    <string name="UI_error_camera_take_photo">Failed take a picture</string>
    <string name="analyze">Images analyze</string>
    <string name="result">Result analyze</string>
    <string name="Result">Hasil : </string>
    <string name="button_text_analiyze">Analyze</string>
    <string name="default_web_client_id">87946930847-iuvjls5ujuk30tuj915mc2bsvamt02af.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="articles">images article</string>
    <string name="titles">Dermatitis atopik</string>
    <string name="description"><![CDATA[Dermatitis Atopik  adalah  suatu kondisi kulit yang bersifat kronis dan seringkali bersifat reaktif terhadap alergen atau iritan tertentu.]]></string>
    <string name="profile_image">image</string>
    <string name="history">History Detection</string>
    <string name="Delet_History">Delet history</string>
    <string name="label">Skin Allergy</string>
    <string name="Created_At">Created At</string>
    <string name="Suggestion">Sugestion</string>
    <string name="Explanation">Explanation</string>
    <string name="Result_Detection">Result Detection</string>
    <string name="name_profile">Aldo</string>
    <string name="Call_welcome">Haii...</string>
    <string name="title_article">Article</string>
    <string name="Logout">Logout</string>
    <string name="top_headline_new">Top Headline Article</string>
    <string name="You_have_history_detection">Anda tidak memiliki history</string>
    <string name="Cancel">Batal</string>
    <string name="history_delet">History dihapus</string>
    <string name="Delet">Hapus</string>
    <string name="question_delet_permanen">history akan terhapus permanen</string>
    <string name="question_delet_history">Yakin ingin menghapus history?</string>
</resources>