<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_title_bottom_nav_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_article"
        android:icon="@drawable/ic_baseline_article_24"
        android:title="@string/menu_title_bottom_nav_article"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_detection"
        android:icon="@drawable/ic_baseline_add_24_"
        android:title="@string/menu_title_bottom_nav_detection"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/menu_title_bottom_nav_hystory"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/menu_title_bottom_nav_profile"
        app:showAsAction="ifRoom" />
</menu>